# OMPT-demo-tool

./: CMakeLists.txt  LICENSE  README.md  go.sh  sourceme-hipcc.sh  sourceme-intel.sh  sourceme-nvhpc.sh  sourceme.sh
src/: callbacks.cpp
src/mandel/: mandel.c  ppm.c
src/simple/: matmult.c
